@@ -149,8 +149,10 @@ static void printVersion(FILE * fp)
 	/*@globals rpmEVR, fileSystem @*/
 	/*@modifies *fp, fileSystem @*/
 {
-    fprintf(fp, _("%s version %s rpmlib markers (0x%08x,0x%08x,0x%08X)\n"),
-	RPM_NAME, rpmEVR, rpmlibVersion(), rpmlibTimestamp(), rpmlibVendor());
+    fprintf(fp, _(RPM_NAME" version %s\n"), rpmEVR);
+    if (rpmIsVerbose())
+	fprintf(fp, "rpmlib markers (0x%08x,0x%08x,0x%08X)\n",
+	    rpmlibVersion(), rpmlibTimestamp(), rpmlibVendor());
 }
 
 static void printUsage(poptContext con, FILE * fp, int flags)
